apps/base/smart-home/home-assistant/endpoint-slice.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: home-assistant
  labels:
    kubernetes.io/service-name: home-assistant
addressType: FQDN
ports:
  - name: http
    port: 8123
endpoints:
  - addresses:
      - homeassistant.localdomain
